--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -20,13 +20,13 @@
   </div>
   <form class="formaa"> 
       <ion-label>{{'User name'|translate}}</ion-label>
-      <ion-input type="text" ></ion-input>
+      <ion-input type="text" #username></ion-input>
        
       <ion-label>{{'Email'|translate}}</ion-label>
-      <ion-input type="email" ></ion-input>
+      <ion-input type="email" #email></ion-input>
 
       <ion-label>{{'Password'|translate}}</ion-label>
-      <ion-input type="password" ></ion-input>
+      <ion-input type="password" #password></ion-input>
 
       <button ion-button outline (click)="gomain()">{{'Sign Up'|translate}}</button>
      
