--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,16 +25,16 @@
 
   <form class="formaa"> 
       <ion-label>{{'Phone No.'|translate}}</ion-label>
-      <ion-input type="text" ></ion-input>
+      <ion-input type="text" #phoneNo name="phoneNo"></ion-input>
   
       <ion-label>{{'Password'|translate}}</ion-label>
-      <ion-input type="password" ></ion-input>
+      <ion-input type="password" #password name="password"></ion-input>
 
       <p (click)="goForget()">{{'Forget My Password'|translate}}</p>
 
       <ion-row style="text-align: center;">
         <ion-col col-3><img src="assets/imgs/google.png"></ion-col>
-        <ion-col col-3><img src="assets/imgs/facebook.png"></ion-col>
+        <ion-col col-3><img src="assets/imgs/facebook.png" (click)= "logFace()"></ion-col>
         <ion-col col-6><button ion-button outline (click)="gomain()">{{'Sign In'|translate}}</button></ion-col>
       </ion-row>
       <ion-row class="sign">
