--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -33,7 +33,7 @@
       <p (click)="goForget()">{{'Forget My Password'|translate}}</p>
 
       <ion-row style="text-align: center;">
-        <ion-col col-3><img src="assets/imgs/google.png"></ion-col>
+        <ion-col col-3><img src="assets/imgs/twitter.png"(click)="twitterlog()"></ion-col>
         <ion-col col-3><img src="assets/imgs/facebook.png" (click)= "logFace()"></ion-col>
         <ion-col col-6><button ion-button outline (click)="gomain()">{{'Sign In'|translate}}</button></ion-col>
       </ion-row>
