--- a/src/pages/favorite/favorite.html
+++ b/src/pages/favorite/favorite.html
@@ -15,59 +15,17 @@
 
 <ion-content>
   <ion-row class="product">
-    <ion-col col-6>
-      <ion-icon class="heart" name="heart-outline"></ion-icon>
-      <!--<ion-icon class="heart" name="heart"></ion-icon>-->
-      <img src="assets/imgs/roug1.jpg" (click)="showDetails()">
-      <p >Cheese Rugelach</p>
-      <p>$10.95</p>
-      <button ion-button block>{{'Add to Cart'|translate}}</button>
-      <!--<div>
+    <ion-col col-6 *ngFor="let item of favItems, let i = index">
+      <ion-icon class="heart" name="close" (click)="deleteItem(item.item_id)"></ion-icon>
+      <img [src]="MainProvider.itemsImg+item.itemimages.image_path" (click)="showDetails()">
+      <p >{{item.items.item_name}}</p>
+      <p>${{item.items.price}}</p>
+      <button ion-button block (click)="addToCart()">{{'Add to Cart'|translate}}</button>
+      <!-- <div *ngIf="quan">
         <ion-icon name="add"></ion-icon>
-        <p id="no">2</p>
+        <p id="no">{{item.quantity}}</p>
         <ion-icon name="remove"></ion-icon>
-      </div>-->
-    </ion-col>
-    <ion-col col-6>
-      <!--<ion-icon class="heart" name="heart-outline"></ion-icon>-->
-      <ion-icon  class="heart" name="heart"></ion-icon>
-      <img src="assets/imgs/roug2.jpg">
-      <p >Cheese Rugelach</p>
-      <p>$10.95</p>
-      <div>
-        <ion-icon name="add"></ion-icon>
-        <p id="no">2</p>
-        <ion-icon name="remove"></ion-icon>
-      </div>
+      </div> -->
     </ion-col>
   </ion-row>
-   <ion-row class="product">
-     <ion-col col-6>
-       <!--<ion-icon class="heart" name="heart-outline"></ion-icon>-->
-       <ion-icon  class="heart" name="heart"></ion-icon>
-       <img src="assets/imgs/roug3.jpg">
-       <p >Cheese Rugelach</p>
-       <p>$10.95</p>
-       <button ion-button block>{{'Add to Cart'|translate}}</button>
-      <!--<div>
-        <ion-icon name="add"></ion-icon>
-        <p id="no">2</p>
-        <ion-icon name="remove"></ion-icon>
-      </div>-->
-     </ion-col>
-     <ion-col col-6>
-    
-        <ion-icon class="heart" name="heart-outline"></ion-icon>
-        <!--<ion-icon class="heart" name="heart"></ion-icon>-->
-        <img src="assets/imgs/roug4.jpg">
-        <p >Cheese Rugelach</p>
-        <p>$10.95</p>
-        <!--<button ion-button block>Add to Cart</button>-->
-        <div>
-          <ion-icon name="add"></ion-icon>
-          <p id="no">2</p>
-          <ion-icon name="remove"></ion-icon>
-        </div>
-      </ion-col>
-   </ion-row>
 </ion-content>
