--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -50,7 +50,7 @@
    <ion-col col-2> <ion-icon name="arrow-forward"></ion-icon></ion-col>
  </ion-row>
 
-  <ion-row class="cont">
+  <ion-row class="cont" (click)="logOut()">
    <ion-col col-10>{{'Logout'|translate}}</ion-col>
    <ion-col col-2> <ion-icon name="arrow-forward"></ion-icon></ion-col>
  </ion-row>
