--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -56,7 +56,7 @@
      <div>{{quantiy}}</div>
    </ion-col>
    <ion-col col-8>
-     <button ion-button block>{{'Add to Cart'|translate}}</button>
+     <button ion-button block (click)="addTocart()">{{'Add to Cart'|translate}}</button>
    </ion-col>
 </ion-row>  
 </ion-content>
