--- a/src/pages/favorite/favorite.html
+++ b/src/pages/favorite/favorite.html
@@ -4,7 +4,7 @@
     <ion-row style="text-align: center;">
         <ion-col col-1><img src="assets/imgs/search.png"></ion-col>
         <ion-col col-8 style="font-family: Bitter;font-weight: 500;">{{'Favorites'|translate}}</ion-col>
-        <ion-col col-2> <img height="35px" src="assets/imgs/cart.png"></ion-col>
+        <ion-col col-2 (click)="goCart()"> <p class="cartno">{{MainProvider.cartNo}}</p> <img height="35px" src="assets/imgs/cart.png"></ion-col>
         <ion-col col-1  (click)="presentActionSheet()">
           <img height="28px" src="assets/imgs/filter.png">
         </ion-col>
@@ -14,10 +14,11 @@
 </ion-header>
 
 <ion-content>
+    <!-- (click)="showDetails(item.itemimages,item.items.item_name,item.items.itemdetails_ar,item.items.quantity,item.items.item_id,item.items.category_id)" -->
   <ion-row class="product">
     <ion-col col-6 *ngFor="let item of favItems, let i = index">
       <ion-icon class="heart" name="close" (click)="deleteItem(item.item_id)"></ion-icon>
-      <img [src]="MainProvider.itemsImg+item.itemimages.image_path" (click)="showDetails()">
+      <img (click)="showDetails(item.items.itemimages,item.items.item_name,item.items.itemdetails_ar,item.items.quantity,item.items.item_id,item.items.category_id)" [src]="MainProvider.itemsImg+item.items.itemimages[0].image_path">
       <p >{{item.items.item_name}}</p>
       <p>${{item.items.price}}</p>
       <button ion-button block #quan [class]="btnsdiv[i]" (click)="addToCart(i,item.item_id,item.items.quantity,category_id)">{{'Add to Cart'|translate}}</button>
