--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,9 +2,12 @@
   <ion-navbar>
     <ion-title>
       <ion-row style="text-align: center;">
-        <ion-col col-1><img  src="assets/imgs/search.png"></ion-col>
+        <ion-col col-1>
+          <!-- <img  src="assets/imgs/search.png"> -->
+        </ion-col>
         <ion-col col-8 style="font-family: Bitter;font-weight: 500;"> {{'Bakery'|translate}}</ion-col>
-        <ion-col col-2 (click)="goCart()"> <img height="35px" src="assets/imgs/cart.png"></ion-col>
+        <ion-col col-2 (click)="goCart()"><p class="cartno">{{MainProvider.cartNo}}</p> <img height="35px" src="assets/imgs/cart.png">  </ion-col>
+        
         <ion-col col-1  (click)="presentActionSheet()">
           <img height="28px" src="assets/imgs/filter.png">
         </ion-col>
@@ -31,13 +34,15 @@
     <ion-col col-6 *ngFor="let item of allItems; let i = index">
       <ion-icon #icon [name]="icons[i]" class="heart" (click)="addToFav(item.item_id,i)"></ion-icon>
       <!--<ion-icon class="heart" name="heart"></ion-icon>-->
-      <img [src]="MainProvider.itemsImg+item.itemimages[0].image_path" (click)="showDetails(item.itemimages,item.item_name,item.itemdetails_ar,item.quantity)">
+      <img [src]="MainProvider.itemsImg+item.itemimages[0].image_path" (click)="showDetails(item.itemimages,item.item_name,item.itemdetails_ar,item.quantity,item.item_id,item.category_id)">
       <p>{{item.item_name}}</p>
       <p>${{item.price}}</p>
       <button ion-button block #quan [class]="btnsdiv[i]" (click)="addToCart(i,item.item_id,item.quantity,category_id)">{{'Add to Cart'|translate}}</button>
       <div #quan [class]="quandiv[i]">
-        <ion-icon name="add" (click)="increaseQuan(quanno,item.item_id,category_id)"></ion-icon>
-        <input id="no" #quanno value="{{item.quantity}}" readonly>
+        <ion-icon name="add" (click)="increaseQuan(i,quanno1,item.item_id,category_id)"></ion-icon>
+        <!-- <input id="no" #quanno value="{{item.items.quantity}}" readonly> -->
+        <input id="no" #quanno1 [value]="count2[i]" readonly>
+      
         <ion-icon name="remove" (click)="decreaseQuan(quanno,item.item_id,category_id)"></ion-icon>
       </div>
     </ion-col>
@@ -49,14 +54,14 @@
       <ion-col col-6 *ngFor="let item of specItems,let i=index">
         <ion-icon #icon [name]="icons[i]" class="heart" (click)="addToFav(item.item_id,i)"></ion-icon>
         <!--<ion-icon class="heart" name="heart"></ion-icon>-->
-        <img [src]="MainProvider.itemsImg+item.itemimages[0].image_path" (click)="showDetails(item.itemimages,item.item_name,item.itemdetails_ar,item.quantity)">
+        <img [src]="MainProvider.itemsImg+item.itemimages[0].image_path" (click)="showDetails(item.itemimages,item.item_name,item.itemdetails_ar,item.quantity,item.item_id,item.category_id)">
         <p >{{item.item_name}}</p>
         <p>${{item.price}}</p>
         <button ion-button block #quan [class]="btnsdiv[i]" (click)="addToCart(i,item.item_id,item.quantity,category_id)">{{'Add to Cart'|translate}}</button>
         <div #quan [class]="quandiv[i]">
-            <ion-icon name="add"></ion-icon>
-            <p id="no" #quanno>{{item.quantity}}</p>
-            <ion-icon name="remove"></ion-icon>
+            <ion-icon name="add" (click)="increaseQuan(quanno,item.item_id,category_id)"></ion-icon>
+            <input id="no" #quanno value="{{item.cart[0].quantity}}" readonly>
+            <ion-icon name="remove" (click)="decreaseQuan(quanno,item.item_id,category_id)"></ion-icon>
           </div>
       </ion-col>
     </ion-row>
