--- a/src/pages/payment/payment.html
+++ b/src/pages/payment/payment.html
@@ -65,7 +65,7 @@
   </div>
 </ion-list>  
 
-<ion-row style="    margin: 0px 5px;
+<!-- <ion-row style="    margin: 0px 5px;
     padding: 10px 0px 30px;
     border-bottom: 1px solid lightgray;">
   <ion-col col-1> 
@@ -74,7 +74,7 @@
   <ion-col col-9><p style="margin: 0;font-size: 16px;">{{'Add new Payment Method'|translate}}</p></ion-col>
   <ion-col col-1><ion-icon name="arrow-forward" style="font-size: 30px;color: orange;"></ion-icon></ion-col>
   <ion-col col-1></ion-col>
-</ion-row>
+</ion-row> -->
 
 
 </ion-content>
