--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+  
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLj2T70tRlsHKffZFxLOUv2wIlrTZeYas"type="text/javascript"></script>
+  <script src="cordova.js"></script>
 </body>
 </html>
