--- a/src/pages/invoice/invoice.html
+++ b/src/pages/invoice/invoice.html
@@ -4,28 +4,27 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content (click)="dismiss()">
+<ion-content>
 <ion-row>
   <ion-col col-6 class="colinvoice">{{'INVOICE'|translate}}
   </ion-col>
-  <ion-col col-6 class="colno">#34567</ion-col>
+  <ion-col col-6 class="colno">#{{invoice[0].historyinfo_id}}</ion-col>
 </ion-row>
 
-<p>15 Aug 2017</p>
+<!-- <p>{{invoice.created_at|date}}</p> -->
 
 <ion-row>
-  <ion-col col-6 class="colleft">{{'Expected Delivery'|translate}}</ion-col>
-  <ion-col col-6 class="colright">18 Aug 2017</ion-col>
+  <ion-col col-6 class="colleft">{{'Order Date'|translate}}</ion-col>
+  <ion-col col-6 class="colright">{{invoice[0].created_at|date}}</ion-col>
 </ion-row>
-
 <ion-row>
-  <ion-col col-6 class="colleft">{{'Shipping'|translate}}</ion-col>
-  <ion-col col-6 class="colright">35 SAR</ion-col>
+    <ion-col col-6 class="colleft">{{'Payment Method'|translate}}</ion-col>
+    <ion-col col-6 class="colright">{{invoice[0].payment_method}}</ion-col>
 </ion-row>
 
 <ion-row>
   <ion-col col-6 class="colleft">{{'Items'|translate}}</ion-col>
-  <ion-col col-6 class="colright">6</ion-col>
+  <ion-col col-6 class="colright">{{invoice[1].itemsNo}}</ion-col>
 </ion-row>
 
 <ion-row style="padding:0;margin: 45px 0 0">
@@ -33,7 +32,12 @@
 </ion-row>
 
 <ion-row style="padding-top:0;">
-  <ion-col col-6 class="colleft">Total</ion-col>
-  <ion-col col-6 class="totalprice">345 {{'SAR'|translate}}</ion-col>
+  <ion-col col-6 class="colleft">{{'Total Price'|translate}}</ion-col>
+  <ion-col col-6 class="totalprice">{{invoice[0].total_price}} {{'SAR'|translate}}</ion-col>
 </ion-row>
+
+<!-- <ion-row style="padding-top:0;">
+  <button ion-button block class="home" (click)="gohome()">{{'Go Home Page' |translate}}</button>
+</ion-row> -->
+
 </ion-content>
