--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -42,24 +42,26 @@
   </ion-col>
 </ion-row>
 
+<input class="total"  value="{{totalprice}}" readonly>
 
 <div class="itemrow">
-  <ion-row *ngFor="let item of cartItems">
+  <ion-row *ngFor="let item of cartItems,let i=index">
     <ion-col col-4>
-      <img [src]="MainProvider.itemsImg+item.itemimages.image_path">
+      <img [src]="MainProvider.itemsImg+item.items.itemimages[0].image_path">
       <!--<div class="tcolor"></div>-->
     </ion-col>
     <ion-col col-8>
       <ion-row>
         <ion-col col-10> <p class="p1">{{item.items.item_name}} </p></ion-col>
-        <ion-col col-2><ion-icon class="closeicon" name="close" (click)="deleteItem(item.items.item_id)"></ion-icon></ion-col>
+        <ion-col col-2><ion-icon class="closeicon" name="close" (click)="deleteItem(i,item.item_id)"></ion-icon></ion-col>
       </ion-row>
        
         <p class="p2" >{{item.items.price}}</p>
         <div>
-          <ion-icon name="add"  (click)="increaseQuan(quanno,item.items.item_id,item.items.category_id)"></ion-icon>
-          <input id="no" #quanno value="{{item.quantity}}" readonly>
-          <ion-icon name="remove" (click)="decreaseQuan(quanno,item.items.item_id,item.items.category_id)"></ion-icon>
+          <ion-icon name="add"  (click)="increaseQuan(quanno,item.item_id,item.items.category_id)"></ion-icon>
+          <input id="no" [ngModel]="item.quantity"  #quanno value="{{item.quantity}}" readonly>
+          
+          <ion-icon name="remove" id="remove" (click)="decreaseQuan(i,quanno,item.item_id,item.items.category_id)"></ion-icon>
 
           <!-- <p class="print" >{{'Printed'|translate}}</p> -->
          <!-- <img src="assets/imgs/printer.png">  -->
