--- a/src/pages/payment/payment.html
+++ b/src/pages/payment/payment.html
@@ -43,24 +43,24 @@
 </ion-row>
 
 
-<ion-list no-lines radio-group>
+<ion-list no-lines radio-group >
  <div class="contdiv">
     <img src="assets/imgs/cash.png" height="20px">
     <ion-item class="myitem">  
         <ion-label>
          {{'Cash on delivery'|translate}}
         </ion-label>
-        <ion-radio checked="true" value="go"></ion-radio>
+        <ion-radio value="cash" (ionSelect)="changetoCash()"></ion-radio>
     </ion-item> 
   </div>
   <div class="contdiv">
      <img src="assets/imgs/master.png" height="20px">
     <ion-item class="myitem">
       <ion-label>
-       {{'Master Card'|translate}}
+       {{'PayPal'|translate}}
       </ion-label>
     
-    <ion-radio value="rust"></ion-radio>
+    <ion-radio value="rust" value="PayPal" (ionSelect)="changepay()" ></ion-radio>
   </ion-item>
   </div>
 </ion-list>  
@@ -84,7 +84,7 @@
    </ion-col>
    <ion-col col-9>
      <!--<button ion-button block (click)="showInv()">Confirm</button>-->
-     <button ion-button block (click)="showInv()">{{'Confirm'|translate}}</button>
+     <button ion-button block (click)="makeOrder()">{{'Confirm'|translate}}</button>
    </ion-col>
 </ion-footer>  
 
