--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -1,5 +1,6 @@
 <ion-content>
-<p style="text-align: end;margin: 17px 18px 0;">
+  <yellowhead></yellowhead>
+<!-- <p style="text-align: end;margin: 17px 18px 0;">
   <img src="assets/imgs/modify.png" height="25px" (click)="editAcc()"></p>
 <div class="profilediv">
   <img *ngIf="img != null" [src]='"data:image/png;base64,"+img'>
@@ -7,7 +8,7 @@
 
   <p>{{name}}</p>
   <p>{{email}}</p>
-</div>
+</div> -->
 
 <div>
     <ion-scroll scrollX="true">
