--- a/src/pages/payment/payment.html
+++ b/src/pages/payment/payment.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>  
       <ion-row style="text-align: center">
@@ -20,13 +20,14 @@
   </ion-title>
   </ion-navbar>
 </ion-header>
-
+ -->
 
 <ion-content>
-
+<yellowhead></yellowhead>
+<p class="pagetitle">{{'Payment'|translate}}</p>
 <ion-row>
   <ion-col col-12>
-      <img src="assets/imgs/topimg3.png">
+      <img width="100%" src="assets/imgs/topimg3.png">
   </ion-col>
 </ion-row>
 
@@ -37,7 +38,7 @@
    <ion-col col-4 style="text-align:center">
        {{'Locations'|translate}}
   </ion-col>
-   <ion-col col-4 style="text-align:end;color:orange">
+   <ion-col col-4 style="text-align:end;color:#3b9ea6">
        {{'Payment'|translate}}
   </ion-col>
 </ion-row>
