--- a/src/pages/locations/locations.html
+++ b/src/pages/locations/locations.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>  
       <ion-row style="text-align: center">
@@ -20,13 +20,14 @@
   </ion-title>
   </ion-navbar>
 </ion-header>
-
+ -->
 
 <ion-content>
-
+  <yellowhead></yellowhead>
+  <p class="pagetitle">{{'Locations'|translate}}</p>
 <ion-row>
   <ion-col col-12>
-      <img src="assets/imgs/topimg2.png">
+      <img width="100%" src="assets/imgs/topimg2.png">
   </ion-col>
 </ion-row>
 
@@ -34,7 +35,7 @@
   <ion-col col-4 style="text-align:start">
     {{'Add items'|translate}}
   </ion-col>
-   <ion-col col-4 style="text-align:center;color:orange">
+   <ion-col col-4 style="text-align:center;color:#3b9ea6">
     {{'Locations'|translate}}
   </ion-col>
    <ion-col col-4 style="text-align:end">
