--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -4,20 +4,21 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title><ion-icon (click)="gomain()" name="close"></ion-icon></ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
 <ion-content>
-  <div style="width:70%;margin: 10px auto">
-    <p id="wel">{{'Welcome to'|translate}}</p>
-    <p id="bak">Bakery</p>
-  </div>
+    <div class="imgdiv">
+        <img src="assets/imgs/logo.png">
+    </div>
+
+
   <form class="formaa"> 
       <ion-label>{{'User name'|translate}}</ion-label>
       <ion-input type="text" #username></ion-input>
